# m_dll_api

./: .gitignore  CMakeLists.txt  DemoCsharp.sln  README.md  common.cmake
demoCpp/: CMakeLists.txt
demoCpp/src/: main.cpp
demoCsharp/: Program.cs  demoCsharp.csproj
myApi/: CMakeLists.txt
myApi/src/: defines.h  number.cpp  number.h  physics_api.cpp  physics_api.h
myDemo/: CMakeLists.txt
myDemo/src/: main.cpp
